subiendo elmentos y fuentes

--- a/index.html
+++ b/index.html
@@ -1,103 +1,144 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Alarms Security Integrators | Alarmas | San Juan| Puerto Rico (PR)</title>
-  <meta name="keywords" content="Instalación, Venta y Reparación, Alarmas Robo , Fuego, Controles de Acceso
+    <title>Alarms Security Integrators | Alarmas | San Juan| Puerto Rico (PR)</title>
+    <meta name="keywords" content="Instalación, Venta y Reparación, Alarmas Robo , Fuego, Controles de Acceso
        Cámaras de Seguridad, Electricidad" />
-  <meta name="author" content="	Alarms Security Integrators   | Alarmas | San Juan| Puerto Rico (PR)" />
-  <meta name="copyright" content="	Alarms Security Integrators   | Alarmas | San Juan| Puerto Rico (PR)" />
-  <meta name="description"
-    content="Te ofrecemos el sistema más completo de protección y detección con nuestra alarma para casa. Unimos la tecnología e innovación con la experiencia en seguridad para poner a tu alcance soluciones personalizadas. Somos tu mejor alternativa en seguridad. Tenemos todo lo que necesitas al mejor precio. Descubre cuál es el equipo de seguridad más adecuando para tu hogar o negocio. Controla puntos estratégicos como puertas o ventanas, mantén seguro tu hogar mientras duermes. " />
+    <meta name="author" content="	Alarms Security Integrators   | Alarmas | San Juan| Puerto Rico (PR)" />
+    <meta name="copyright" content="	Alarms Security Integrators   | Alarmas | San Juan| Puerto Rico (PR)" />
+    <meta name="description"
+        content="Te ofrecemos el sistema más completo de protección y detección con nuestra alarma para casa. Unimos la tecnología e innovación con la experiencia en seguridad para poner a tu alcance soluciones personalizadas. Somos tu mejor alternativa en seguridad. Tenemos todo lo que necesitas al mejor precio. Descubre cuál es el equipo de seguridad más adecuando para tu hogar o negocio. Controla puntos estratégicos como puertas o ventanas, mantén seguro tu hogar mientras duermes. " />
 
-  <!-- css -->
-  <link rel="stylesheet" href="css/styles.css">
-  <!-- Scrollbar Custom CSS -->
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
+    <!-- css -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/izmir.min.css">
+    <!-- Scrollbar Custom CSS -->
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link type="image/x-icon" href="http://www.superpagespr.com/Content/images/favicon_sppr.ico" rel="SHORTCUT ICON" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link type="image/x-icon" href="http://www.superpagespr.com/Content/images/favicon_sppr.ico" rel="SHORTCUT ICON" />
+
 
 </head>
+
 <body>
-   
-      <header>
-    <!-- Sidebar  -->
-    <nav id="sidebar" class="overlay">
-      <div id="dismiss">
-        <i class="fa fa-arrow-left"></i>
-      </div>
 
-      <div class="sidebar-header">
-        <h3 class="logo-text"><img src="img/logo.png" alt=""></h3>
-      </div>
+    <header>
+        <!-- Sidebar  -->
+        <nav id="sidebar" class="overlay">
+            <div id="dismiss">
+                <i class="fa fa-arrow-left"></i>
+            </div>
 
-      <ul class="list-unstyled components">
+            <div class="sidebar-header">
+                <h3 class="logo-text"><img src="img/logo.png" width="200" alt=""></h3>
+            </div>
 
-        <li class="active">
-          <a href="index.html">Inicio</a>
+            <ul class="list-unstyled components">
 
-        </li>
-         <li>
-          <a href="servicios.html">Servicios</a>
+                <li class="active">
+                    <a href="index.html">Inicio</a>
 
-        </li>
-
-        <li >
-          <a href="contacto.html">Contato</a>
-        </li>
-      </ul>
-
-
-    </nav>
-
-    <!-- Navbar  -->
-    <div id="content-fluid">
-
-      <nav class="navbar navbar-expand-lg navbar-light  ">
-        <div class="container-fluid">
-          <h3 class="logo-text"><img src="logo.png" alt=""></h3>
-          <button type="button" id="sidebarCollapse" class="btn btn-info">
-            <i class="fa fa-align-left"></i>
-
-          </button>
-
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="nav navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Inicio</a>
-              </li>
-
-               <li class="nav-item ">
-                <a class="nav-link" href="servicios.html">Servicios</a>
-              </li>
-
-              <li class="nav-item ">
-                <a class="nav-link" href="contacto.html">Contacto</a>
-              </li>
+                </li>
+                <li>
+                    <a href="servicios.html">Servicios</a>
+                </li>
+                <li>
+                    <a href="contacto.html">Contacto</a>
+                </li>
             </ul>
-          </div>
+
+
+        </nav>
+
+        <!-- Navbar  -->
+        <div id="content-fluid">
+
+            <nav class="navbar navbar-expand-lg navbar-light  ">
+                <div class="container-fluid">
+                    <h3 class="logo-text"><img src="img/logo.png" alt=""></h3>
+                    <button type="button" id="sidebarCollapse" class="btn btn-info">
+                        <i class="fa fa-align-left"></i>
+
+                    </button>
+
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav ml-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="servicios.html">Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="header-imagen">
+                <img src="img/header.png" width="100%" alt="header">
+            </div>
+
+    </header>
+
+    <section class="secc-1">
+        <div class="content-flex">
+            <div class="item-flex-secc-1">
+                <img src="img/local-frente.png" alt="">
+            </div>
+
+            <div class="item-flex-text-secc-1">
+                <h1>SOBRE NOSOTROS</h1>
+                <div class="content-linea">
+                    <div class="line-secc-1"> </div>
+                    <div class="line-secc-1"> </div>
+                </div>
+
+
+                <p>Farmacia Arbolada tiene como norte Mejorar la Salud y el bienestar de nuestra comunidad en Bayamón y
+                    áreas adyacentes. Nos esmeramos por ofrecer los mejores productos del mercado, y tenemos como meta
+                    ser el líder en la industria de servicios accesibles y fáciles de conseguir. Esto incluye
+                    consultas por un Licenciado Farmacéutico y por todo su equipo técnico, todo en un solo lugar.</p>
+
+                <p>Nuestra meta es ser reconocidos por nuestro excelente servicio al cliente, calor humano y por proveer
+                    variedad de alternativas que mejoren la calidad de vida de nuestros pacientes y clientes.</p>
+
+                 <p>Nos distinguimos por tener empleados de servicio al cliente con gran experiencia y compromiso para con la empresa y clientes.</p>
+            </div>
+
+
         </div>
-      </nav>
-     
-  </header>
+    </section>
 
 
 
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="js/menu.js"></script>
 
-  <!-- Font Awesome -->
-  <script src="https://use.fontawesome.com/37b1633afd.js"></script>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="js/menu.js"></script>
+    <!-- jQuery Custom Scroller CDN -->
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js">
+    </script>
+
+    <!-- Font Awesome -->
+    <script src="https://use.fontawesome.com/37b1633afd.js"></script>
+
 
 
 </body>
+
 </html>
